book: Add parameter type to {serendipity_fetchPrintEntries}

--- a/book/index.html
+++ b/book/index.html
@@ -46567,7 +46567,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">category</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(int)</code></span>
             </span>
             <span class="sub-box">
                 Legt die Kategorie-ID fest, aus der die Blog-Artikel gelesen werden sollen. Ohne
@@ -46578,7 +46578,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">viewAuthor</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(int)</code></span>
             </span>
             <span class="sub-box">
                 Legt die Redakteurs-ID fest, vom der die Blog-Artikel gelesen werden sollen. Ohne
@@ -46589,7 +46589,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">page</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(int)</code></span>
             </span>
             <span class="sub-box">
                 Wenn die Liste der Blog-Artikel mehr als eine Seite ausfüllt [*]
@@ -46604,7 +46604,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">id</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(int)</code></span>
             </span>
             <span class="sub-box">
                 Falls ein einzelner Artikel angezeigt werden soll, enthält dieser Parameter die
@@ -46614,7 +46614,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">range</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">mixed (string/array/null)</code></span>
             </span>
             <span class="sub-box">
                 Kann die Liste der Artikel auf einen gewissen Zeitraum einschränken. Der
@@ -46634,7 +46634,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">modified_since</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(int)</code></span>
             </span>
             <span class="sub-box">
                 Falls der Parameter <code>range</code> leer gelassen wird oder auf <code>null</code> gesetzt
@@ -46645,7 +46645,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">full</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Wenn dieser Parameter auf <code>true</code> gesetzt wird, kann auch der erweiterte
@@ -46656,7 +46656,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">limit</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">mixed (integer/string)</code></span>
             </span>
             <span class="sub-box">
                 Enthält eine Zeichenkette, die angibt, wie viele Blog-Artikel ausgelesen werden
@@ -46673,7 +46673,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">fetchDrafts</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Wenn dieser Parameter auf <code>true</code> gesetzt wird, können auch Blog-Entwürfe
@@ -46684,7 +46684,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">short_archives</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Wenn auf <code>true</code> gesetzt, erfolgt die Ausgabe der Blog-Artikel nicht wie auf
@@ -46695,7 +46695,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">orderby</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(string)</code></span>
             </span>
             <span class="sub-box">
                 Legt die Sortierung der Artikel fest. Dieser Parameter legt den Namen des
@@ -46707,7 +46707,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">filter_sql</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(string)</code></span>
             </span>
             <span class="sub-box">
                 Um die Eingrenzung der gewünschten Blog-Artikel feinzusteuern, kann beliebiger
@@ -46718,7 +46718,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">noCache</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Wenn auf <code>true</code> gesetzt, werden etwaige Caching-Plugins für das Auslesen der
@@ -46729,7 +46729,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">noSticky</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Wenn auf <code>true</code> gesetzt, werden sogenannte <em>Dauerhafte Einträge</em> (siehe
@@ -46741,7 +46741,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">template</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(string)</code></span>
             </span>
             <span class="sub-box">
                 Legt den Namen der Smarty-Template-Datei fest, der für die Darstellung der
@@ -46751,7 +46751,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">block</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(string)</code></span>
             </span>
             <span class="sub-box">
                 Legt den Namen der Smarty-Variable fest, die den HTML-Code des geparsten
@@ -46767,7 +46767,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">preview</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Wenn auf <code>true</code> gesetzt, wird der Artikel so behandelt, als würde er im
@@ -46779,7 +46779,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">groupmode</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(string)</code></span>
             </span>
             <span class="sub-box">
                 Diese Variable legt fest, ob die Liste der Artikel nach dem Tag der
@@ -46790,7 +46790,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">use_hooks</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Wenn auf <code>true</code> gesetzt, werden Ereignis-Plugins für die Darstellung der
@@ -46804,7 +46804,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">use_footer</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Wenn auf <code>true</code> gesetzt, wird der Footer unterhalb der Einträge mit
@@ -46815,7 +46815,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">skip_smarty_hooks</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Um den Aufruf weiterer Ereignis-Plugins bei der Darstellung der Artikel zu
@@ -46830,7 +46830,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">skip_smarty_hook</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">mixed (boolean/array)</code></span>
             </span>
             <span class="sub-box">
                 Im Gegensatz zur pauschalen Blockierung aller Ereignis-Plugins kann diese
@@ -46842,7 +46842,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">select_key</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(string)</code></span>
             </span>
             <span class="sub-box">
                 Kann eine kommaseparierte Liste von SQL-Tabellenfeldnamen enthalten, die in der
@@ -46853,7 +46853,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">group_by</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(string)</code></span>
             </span>
             <span class="sub-box">
                 Enthält den Tabellenfeldnamen, nach dem die Artikelliste via SQL gruppiert
@@ -46864,7 +46864,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">returncode</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(string)</code></span>
             </span>
             <span class="sub-box">
                 Legt fest, ob die Artikelausgabe als ein Datensatz (<code>single</code>) oder
@@ -46875,7 +46875,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">joinauthors</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Enthält den Wert <code>true</code>, wenn die Metadaten für den Redakteur eines Artikels
@@ -46885,7 +46885,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">joincategories</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Enthält den Wert <code>true</code>, wenn die Metadaten für die zugewiesenen Kategorien eines
@@ -46895,7 +46895,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">joinown</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(string)</code></span>
             </span>
             <span class="sub-box">
                 Kann SQL-Anweisungen enthalten, die den <code>JOIN</code>-Teil der Abfrage nach
@@ -46907,7 +46907,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
             <span class="label invisible" id="entryproperties-customprop-fetch">entryproperties-customprop-fetch</span>
             <code class="sub-item smarty">entryprops</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(string)</code></span>
             </span>
             <span class="sub-box">
                 Mit diesem Parameter können Sie eine Liste von zusätzlichen <code>freien
@@ -46947,7 +46947,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><code class="sub-item smarty">prevent_reset</code> (optional)
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">(boolean)</code></span>
             </span>
             <span class="sub-box">
                 Standardmäßig enthält die Variable den Wert <code>false</code> und sorgt dafür,
@@ -46961,7 +46961,7 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
 
         <span class="box"><span class="mbold">Rückgabewert:</span>
             <span class="sub-box">
-                <span class="smarty-type"><em>Variablentyp:</em> <code class="type"></code></span>
+                <span class="smarty-type"><em>Variablentyp:</em> <code class="type">mixed (string/null)</code></span>
             </span>
             <span class="sub-box">
                 HTML-Zeichenkette (<code>entries.tpl</code>)
