book: Announce groups to {serendipity_fetchPrintEntries} parameters

--- a/book/index.html
+++ b/book/index.html
@@ -46561,6 +46561,11 @@ im Funktionsaufruf wie <code>serendipity_funktion parameter1=wert1 parameter2=we
         beliebige Template-Datei (standardmäßig <code>entries.tpl</code>) geparst und zurückgeliefert.
     </span>
 
+    <span class="box">
+        Dabei handelt es sich primär um zwei Parameter Gruppen, von welcher die eine
+        die Auslesung aus der Datenbank selektiert, während die andere die Ausgabeanzeige bestimmt.
+    </span>
+
     <span class="box">Parameter:</span>
 
     <span class="box mda-box">
