book: Fix some wording in 9.5.4

--- a/book/index.html
+++ b/book/index.html
@@ -39961,8 +39961,8 @@ Denn heutzutage benötigen sie für die allermeisten Fälle nur noch folgenden C
 Konfigurationsoberfläche ausführlich beschrieben und ist
 größtenteils bereits selbsterklärend.</p>
 
-<p><span class="mbold">Gundsätzlich</span> gilt aber dennoch: <span class="mbold"><em>Weniger ist mehr!</em></span>
-Und, angesehen vom Spaß den dieses machen könnte, reichen einfache Kenntisse von HTML und CSS meist aus, um ein
+<p><span class="mbold">Grundsätzlich</span> gilt aber festzuhalten: <span class="mbold"><em>Weniger ist mehr!</em></span>
+Abgesehen vom Spaß den dieses dennoch machen könnte, reichen einfache Kenntnisse von HTML und CSS meist aus, um ein
 eigenes Theme konkreter und besser an die eigenen Bedürfnisse anzupassen, als eine PHP/Datenbank Konfiguration
 wie jene hier Beschriebene zu erstellen, die bei jedem Zugriff erst abgefragt und zusammengestellt werden muss.</p>
 
