book: Improve wording in 9.6.2

--- a/book/index.html
+++ b/book/index.html
@@ -40972,7 +40972,7 @@ Beschreibung der einzelnen Ereignis-Plugins hingewiesen, wie beispielsweise beim
 <span class="label invisible" id="entries.tpl">entries.tpl</span>
 </p>
 
-<p>Die Template-Datei <code>entries.tpl</code> ist die zentralste Datei für die
+<p>Die Template-Datei <code>entries.tpl</code> ist die zentrale Datei für die
 Darstellung von Blog-Artikeln im Frontend. Alle für diese Datei aufgeführten
 Variablen sind zwar grundsätzlich auch innerhalb anderer Template-Dateien
 (<code>index.tpl, content.tpl</code>) verfügbar, machen aber üblicherweise nur im
