book: Fixup 6.1.4 modemaintain option usertext

--- a/book/index.html
+++ b/book/index.html
@@ -18826,10 +18826,9 @@ Siehe: <span class="pageref"><a href="#U497">Wartung: Service Wartungs Modus</a>
 <span class="desc-info">
     <span class="box">
         Informationstext der erscheint, wenn sich ihr Blog zur Zeit im Wartungsmodus befindet.
-        <span class="pageref"><a href="#xxx">xxx</a></span> nachlesen.
     </span>
 
-    <span class="box"><span class="recommended">Empfohlene Einstellung</span>: <em>Nein</em></span>
+    <span class="box"><span class="recommended">Empfohlene Einstellung</span>: <em>Je nachdem. Geben Sie ihrem Blog für die temporäre Unterbrechung eine persönliche Note, oder nicht.</em></span>
 </span>
 </p>
 
