--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -1206,7 +1206,7 @@ It is not advised to create your own  style_fallback.css file.</p>
 
 <p>Scope: trackbacks.tpl</p>
 
-<h5 id="docs-head_charset-string-head_version-string-head_title-string-is_logged_in-bool">$head_charset [<span class="vartype-str">string</span>] <em>(deprecated)</em>, $head_title [<span class="vartype-str">string</span>], $head_subtitle [<span class="vartype-str">string</span>], $head_link_stylesheet [<span class="vartype-str">string</span>], $serendipityVersion [<span class="vartype-str">string</span>], $lang [<span class="vartype-str">string</span>], $head_link_script [<span class="vartype-str">string</span>], $head_link_stylesheet_frontend [<span class="vartype-str">string</span>], $is_logged_in [<span class="vartype-bool">bool</span>]</h5>
+<h5 id="docs-head_charset-string-head_version-string-head_title-string-is_logged_in-bool">$head_charset [<span class="vartype-str">string</span>], $head_title [<span class="vartype-str">string</span>], $head_subtitle [<span class="vartype-str">string</span>], $head_link_stylesheet [<span class="vartype-str">string</span>], $serendipityVersion [<span class="vartype-str">string</span>], $lang [<span class="vartype-str">string</span>], $head_link_script [<span class="vartype-str">string</span>], $head_link_stylesheet_frontend [<span class="vartype-str">string</span>], $is_logged_in [<span class="vartype-bool">bool</span>]</h5>
 
 <p>Multiple variables defining the Serendipity version/language, Blog title and link to Stylesheets. <code>$head_title</code> and <code>$head_subtitle</code> are set according to which action is currently performed on the Frontend (category view, archive view etc.)</p>
 
