--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -719,8 +719,8 @@
         <h4 class="plugin_summary">Average Rating</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_communityrating</dt>
-            <dd class="plugin_version">Version 1.2.2 (GPL, Last Updated 2017-04-25)</dd>
-            <dd class="plugin_maintainers">Lewe Zipfel, Garvin Hicking</dd>
+            <dd class="plugin_version">Version 1.2.3 (GPL, Last Updated 2022-11-07)</dd>
+            <dd class="plugin_maintainers">Lewe Zipfel, Garvin Hicking. Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Shows top-rated movies by their average rating</p>
