hc::markup-plugins: Update to links

--- a/hc/en/markup-plugins.html
+++ b/hc/en/markup-plugins.html
@@ -192,7 +192,7 @@ _underlined text_
 
                     <h4 id="docs-markdown">MarkDown</h4>
 
-                    <p><a href="https://daringfireball.net/projects/markdown/">MarkDown</a> is a well known markup language parser and included in a lot of projects and text-editors.</p>
+                    <p><a href="https://daringfireball.net/projects/markdown/" target="_blank">MarkDown</a> is a well known markup language parser and included in a lot of projects and text-editors.</p>
 
                     <pre><code>[example.org](http://example.org/ "Title")
 *emphasized* or **strong**
@@ -200,11 +200,11 @@ _emphasized_ __strong__
 # This is an H1
 ## This is an H2</code></pre>
 
-                    <p>The complete documentation of the syntax can be found at <a href="https://daringfireball.net/projects/markdown/syntax">daringfireball.net</a>. There is also an <a href="https://daringfireball.net/projects/markdown/dingus">online tool</a> to try it first.</p>
+                    <p>The complete documentation of the syntax can be found at <a href="https://daringfireball.net/projects/markdown/syntax" target="_blank">daringfireball.net</a>. There is also an <a href="https://daringfireball.net/projects/markdown/dingus" target="_blank">online tool</a> to try it first.</p>
 
                     <h4 id="docs-textile">Textile</h4>
 
-                    <p><a href="https://github.com/textile/php-textile/blob/master/README.textile">Textile</a> is a markup language parser like MarkDown but not as widespread. The markup is slightly different and in some cases easier to use than MarkDown.</p>
+                    <p><a href="https://github.com/textile/php-textile/blob/master/README.textile" target="_blank">Textile</a> is a markup language parser like MarkDown but not as widespread. The markup is slightly different and in some cases easier to use than MarkDown.</p>
 
                     <pre><code>"Link":http://example.org
 *strong* or **bolded**
@@ -214,11 +214,11 @@ _emphasized_ or __italic__
 h1. This is H1
 h2. This is H2</code></pre>
 
-                    <p>The complete documentation of the syntax and an online sandbox can be found at <a href="https://txstyle.org">txstyle.org</a>.</p>
+                    <p>The complete documentation of the syntax and an online sandbox can be found at <a href="https://textile-lang.com/" target="_blank">textile-lang.com</a>.</p>
 
                     <h4 id="docs-bbcode">BBCode</h4>
 
-                    <p><a href="http://php.net/manual/en/book.bbcode.php">BBCode</a> is an markup language used by the messaging board <a href="https://www.phpbb.com/">PHPBB</a></p>
+                    <p><a href="https://www.phpbb.com/community/help/bbcode" target="_blank">BBCode</a> is an markup language used by the messaging board <a href="https://www.phpbb.com/" target="_blank">PHPBB</a></p>
 
                     <pre><code>[b]bolded[/b]
 [i]italicized[/i]
@@ -226,15 +226,15 @@ h2. This is H2</code></pre>
 [s]strikethrough/deleted[/s]
 [url=http://example.org]example.org[/url]</code></pre>
 
-                    <p>Some more examples can be found at <a href="http://www.bbcode.org/reference.php">bbcode.org</a>, an <a href="http://www.bbcode.org/playground.php">online test tool</a> is available too.</p>
+                    <p>Some more examples can be found at <a href="https://www.bbcode.org/reference.php" target="_blank">bbcode.org</a>, an <a href="https://www.bbcode.org/playground.php" target="_blank">online test tool</a> is available too.</p>
 
                     <h4 id="docs-textwiki">TextWiki</h4>
 
-                    <p>This uses the PEAR Text_Wiki rules (which is an extension of the standard <a href="http://www.c2.com/">WikiWikiWeb</a> text transformation rules. Notice that it does not currently handle Wiki Words.</p>
+                    <p>This uses the PEAR Text_Wiki rules (which is an extension of the standard <a href="http://www.c2.com/" target="_blank">WikiWikiWeb</a> text transformation rules. Notice that it does not currently handle Wiki Words.</p>
 
                     <h4 id="docs-regexp">RegExp</h4>
 
-                    <p>This is the catch-all of markup plugins. It allows you to add custom markup to your blog with <a href="http://us2.php.net/manual/en/function.preg-replace.php">PHP regular expressions</a>!</p>
+                    <p>This is the catch-all of markup plugins. It allows you to add custom markup to your blog with <a href="https://www.php.net/manual/en/function.preg-replace.php" target="_blank">PHP regular expressions</a>!</p>
 
                     <p>For instance, if you use a lot of embedded Flash video, you might want an easy way to specify it in your entries. The RegExp plugin lets you create an <code>&lt;flv&gt;</code> tag, making entry easier for you. Just go to the plugin/serendipity_event_regexpmarkup/regexps/ directory and create a file called FLV.php. In that file, put the regular expression for the tag and the replacement.</p>
 
