book: 4.9.9 - UTF-8 MB4 Migration - precise utf8mb4 for mysql

--- a/book/index.html
+++ b/book/index.html
@@ -15206,7 +15206,7 @@ wieder löschen.</p>
         unterstützen, wie zB. <b>Emojis</b>.
     </span>
     <span class="box">
-        <span class="mbold">Utf8mb4</span> ist eine Obermenge von UTF-8.
+        <span class="mbold">UTF8mb4</span> ist <u>für MySQL</u> eine Obermenge von UTF-8.
     </span>
 
     <span class="box">
