--- a/hc/en/ssl-encrypting.html
+++ b/hc/en/ssl-encrypting.html
@@ -137,7 +137,7 @@
 
                     <p>If you embed anything in your Blog (fonts, javascript, pictures) you have to take care to do this via HTTPS. If not that could lead to a broken security chain. This is shown differently in dependence of the browser you are using. For example, Firefox shows an exclamation mark beside the lock symbol at the url.</p>
 
-                    <p>The modern themes and the plugins usually are aware to use the prefix from the configuration. There could be plugins which use external services that may implement them with http instead of https. This will lead to a broken security chain. For the most cases, an entry on S9y-Origin <a href="https://board.s9y.org">board</a> will activate a developer to fix it (if it is possible for the external service). :)</p>
+                    <p>The modern themes and the plugins usually are aware to use the prefix from the configuration. There could be plugins which use external services that may implement them with http instead of https. This will lead to a broken security chain. For the most cases, an entry on <a href="https://github.com/ophian/styx/discussions">Styx-Discussions</a> will activate a developer to fix it (if it is possible for the external service). :)</p>
 
                     <p>You have to take care for things you embed via the http-nugget-plugin or other things you modify individually in your Blogs sources. If you embed external elements to your Blog entries you also have to take care that they use a secure connection.</p>
 
